ingress/ingress.yaml
apiVersion: networking.k8s.io/v1             
kind: Ingress                                
  name: app-ingress                          
  namespace: app                             
  annotations:
    kubernetes.io/ingress.class: nginx      
  rules:
    - host: meuprojeto.local                 

      http:
        paths:
          - path: /api                       
            pathType: Prefix                
            backend:
              service:
                name: backend                
                port:
                  number: 5000             

          - path: /                          
            pathType: Prefix                
            backend:
              service:
                name: frontend               
                port:
                  number: 80
